# mahjong-server-bot-zoo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHECKLIST.md  CLAUDE.md  README.md  hand.jsonl  pyproject.toml
.claude/: settings.local.json
.claude/handoff/: web_client_auth_integration.md
.github/workflows/: ci.yml
bots/: README.md
bots/python-reference/: bot.py  random_bot.py
docs/: HANDOFF-layer9-kickoff.md  HANDOFF-ops-loose-ends.md  SESSION_HANDOFF.md  ai-plan.md  handoff-ci-mypy.md  research-ideas.md  s2-s3-plan.md  server-plan.md
docs/ops/: cloudflare-tunnel.md
docs/specs/: README.md  account-records-replay.md  achievements.md  admin-console.md  auth.md  bot-runner-protocol.md  cardinal-ui.md  determinism.md  docs-pane.md  engine-api.md  feedback-backlog.md  feedback-reporting.md  feedback-tracking.md  hand-stats.md  human-decide-timeout.md  implementation-order.md  in-game-scoreboard.md  late-join-replay.md  layer8-closeout-r2.md  layer8-closeout.md  live-play-bugfixes.md  minimal-play-view.md  multi-human-seats.md  persistence-api.md  profile-and-settings.md  public-deployment.md  reconnect-rejoin.md  record-format.md  scoring-config.md  seat-port.md  selfplay-harness.md  server-lifecycle.md  session-mux.md  sqlite-schema.md  state-schema.md  table-chat.md  table-management.md  tui-client.md  v0-offense-bot.md  v1-rule-bot.md  (+1 more)
mahjong/: __init__.py  __main__.py  analysis.py
mahjong/adapters/: __init__.py  autopass.py  base.py  bot_runner.py  canned.py  human.py  paced.py  v0.py  v1.py
mahjong/bots/: __init__.py  belief.py  botzone_serializer.py  errors.py  manifest.py  registry.py  sandbox.py  v0.py  v1.py
mahjong/cli/: __init__.py  account.py  control.py  play_test.py  selfplay.py  serve.py
mahjong/control/: __init__.py  app.py  feedback.py  health.py  logbuffer.py  metrics.py  plane.py  server.py  services.py  supervisor.py  tunnel.py
mahjong/engine/: __init__.py  errors.py  hashing.py  pymj.py  rng.py  scoring.py  state.py  tiles.py  types.py
mahjong/persistence/: __init__.py  accounts.py  achievements.py  auth.py  db.py  hands.py  invites.py  models.py  rebuild.py
mahjong/records/: __init__.py  botzone_export.py  diff.py  reader.py  replay.py  replay_stream.py  writer.py
mahjong/selfplay/: __init__.py  eval.py  runner.py  seeds.py
mahjong/server/: __init__.py  admin_status.py  config.py  health.py  logconfig.py  orchestrator.py  periodic.py  ratelimit.py  registry.py  seat_bots.py  seats.py  table_options.py
mahjong/sessions/: __init__.py  mux.py  timers.py
mahjong/table/: __init__.py  manager.py  match_score.py  rotation.py
mahjong/web/: __init__.py  demo.py  server.py
mahjong/wire/: __init__.py  codec.py  errors.py  feedback.py  server.py
scripts/: eval_inprocess.py  mahjong-console  mahjong-console.command  paired_compare.py
tests/: conftest.py  test_scaffold.py
tests/_fixtures/: README.md  canonical_hash.json  canonical_tile_set.json  initial_state_seed_12345.json  record_minimal.jsonl  rng_bytes.json  s0_walking_skeleton_seed_12345.jsonl  s2_e2e_record.jsonl  shuffled_wall_12345.json  smoke_exhaustive_draw_seed_12345.json  uniform_int.json
tests/adapters/: test_bot_runner.py  test_bot_runner_parser.py  test_human_adapter.py  test_layer5_e2e.py  test_paced.py  test_protocol.py  test_v0_adapter.py  test_v1_adapter.py
tests/analysis/: test_hand_stats.py  test_settlement_stats.py
tests/bots/: test_belief.py  test_botzone_serializer.py  test_manifest.py  test_python_reference_bot.py  test_registry.py  test_sandbox.py  test_v0.py  test_v1.py
tests/cli/: test_account_invite.py
tests/control/: test_admin_extras_e2e.py  test_admin_server_e2e.py  test_control_app_integration.py  test_feedback.py  test_feedback_status.py  test_health.py  test_logbuffer.py  test_logs_stream.py  test_metrics.py  test_plane.py  test_services.py  test_supervisor.py  test_supervisor_integration.py  test_tunnel.py  test_tunnel_parse.py
tests/engine/: test_errors.py  test_hashing.py  test_legality.py  test_pymj.py  test_rng.py  test_rulesets.py  test_scoring.py  test_scoring_config.py  test_smoke.py  test_state.py  test_tiles.py  test_transitions.py  test_types.py
tests/lint/: test_engine_purity.py
tests/persistence/: expected_schema.sql  test_account_stats.py  test_achievements.py  test_admin_helpers.py  test_auth.py  test_concurrency.py  test_invites.py  test_migrations.py  test_persistence_api.py  test_register.py
tests/records/: test_botzone_export.py  test_diff.py  test_reader.py  test_replay.py  test_replay_stream.py  test_writer.py
tests/selfplay/: test_cli.py  test_eval.py  test_runner.py  test_seeds.py
tests/server/: test_admin_status.py  test_admin_status_e2e.py  test_attach_widening.py  test_auth_wire.py  test_config.py  test_drain_escalation.py  test_feedback_in_game.py  test_feedback_integration.py  test_hand_loop_crash_guard.py  test_health_endpoint.py  test_health_integration.py  test_history_replay_wire.py  test_late_join.py  test_leave_table.py  test_log_format.py  test_match_score_snapshot.py  test_multi_human_e2e.py  test_multi_table.py  test_periodic_tasks.py  test_persistence_wiring.py  test_profile_in_game.py  test_profile_wire.py  test_ratelimit.py  test_ratelimit_integration.py  test_ready_gate.py  test_record_boot_namespace.py  test_resume_snapshot.py  test_s3_gate.py  test_seat_bots.py  test_seat_composition.py  test_seat_holds.py  test_seat_names_snapshot.py  test_sigkill_recovery.py  test_start_hand.py  test_table_list_seats.py  test_table_options.py
tests/sessions/: conftest.py  test_chat.py  test_hand_end_routing.py  test_pending_prompt.py  test_ring_buffer.py  test_shutdown.py  test_spectators.py  test_state_machine.py
tests/table/: test_decide_timeouts.py  test_manager_claims.py  test_manager_core.py  test_manager_errors.py  test_match_score.py  test_rotation.py  test_s0_walking_skeleton.py  test_step_stall_watchdog.py
tests/web/: conftest.py  test_audio_cues.py  test_cardinal_render.py  test_chat_view.py  test_concealed_kong_privacy.py  test_docs_content.py  test_docs_page.py  (+28 more)
(+62 files in other folders)
